# libs

free/: -  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build-self.sh  next_steps.txt
free/.github/workflows/: ci.yml  fuzz.yml
free/docs/: LINUX_KERNEL_BUILD_PLAN.md  REAL_KERNEL_BUILD_ATTEMPT.md
free/include/: CLAUDE.md  aarch64.h  dwarf.h  elf.h  free.h  ir.h  x86_64.h
free/scripts/: CLAUDE.md  REAL_WORLD_GAPS.md  SELF_HOST_TODO.md  bootstrap.sh  fuzz.sh  install.sh  test-install.sh
free/src/: CLAUDE.md
free/src/addr2line/: addr2line.c
free/src/ar/: CLAUDE.md  ar.c
free/src/as/: CLAUDE.md  as.c  emit.c  encode.c  encode_x86.c  lex.c
free/src/ast/: ast_tool.c
free/src/cc/: CLAUDE.md  c11.c  c23.c  c99.c  cc.c  diag.c  dwarf.c  ext_asm.c  ext_attrs.c  ext_builtins.c  gen.c  gen_x86.c  ir.c  ir.h  ir_codegen.c  ir_print.c  ir_serialize.c  lex.c  lto.c  opt.c  opt_bb.c  opt_dce.c  opt_inline.c  opt_mem2reg.c  opt_sccp.c  parse.c  pic.c  pp.c  regalloc.c  type.c  util.c
free/src/cpp/: cpp.c
free/src/dbg/: CLAUDE.md  dbg.c
free/src/depmod/: sortextable.c
free/src/ld/: CLAUDE.md  dynamic.c  elf.c  layout.c  ld.c  ld_internal.h  reloc.c  script.c
free/src/lex/: lex_tool.c
free/src/libc/: CLAUDE.md  ctype.c  dirent.c  errno.c  math.c  mman.c  stdio.c  stdlib.c  string.c  time.c
free/src/libc/arch/: CLAUDE.md
free/src/libc/include/: CLAUDE.md  assert.h  ctype.h  dirent.h  errno.h  fcntl.h  float.h  limits.h  math.h  setjmp.h  signal.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  time.h  unistd.h
free/src/libcx/: CLAUDE.md  arena.c  argparse.c  base64.c  hash.c  log.c  map.c  path.c  str.c  utf8.c  vec.c
free/src/libcx/include/: cx.h  cx_arena.h  cx_argparse.h  cx_base64.h  cx_bitops.h  cx_hash.h  cx_list.h  cx_log.h  cx_map.h  cx_path.h  cx_str.h  cx_utf8.h  cx_vec.h
free/src/make/: make.c
free/src/nm/: nm.c
free/src/objcopy/: objcopy.c
free/src/objdump/: CLAUDE.md  objdump.c
free/src/pahole/: pahole.c
free/src/readelf/: readelf.c
free/src/size/: size.c
free/src/strings/: strings.c
free/src/strip/: strip.c
free/stage2/: free-cc
free/test/: CLAUDE.md  external-suites-report.txt  test.h  testlib.sh
free/test/as/: CLAUDE.md  test_directives.c  test_emit.c  test_encode.c  test_encode_x86.c
free/test/c-testsuite/: 00219  report.txt  run_tests.sh
free/test/cc/: CLAUDE.md  test_gen.c  test_kernel_features.c  test_lex.c  test_opt.c  test_parse.c  test_pp.c  test_type.c
free/test/chibicc-tests/: report.txt  run_tests.sh  test.h
free/test/codegen/: ASM_DIFF_REPORT.md  CGEN_REPORT.md  cgen_regression_112.c  cgen_regression_117.c  cgen_regression_135.c  cgen_regression_145.c  cgen_regression_148.c  cgen_regression_161.c  cgen_regression_176.c  cgen_regression_195.c  cgen_regression_200.c  cgen_regression_241.c  cgen_regression_295.c  cgen_regression_299.c  cgen_regression_30.c  cgen_regression_307.c  cgen_regression_32.c  cgen_regression_33.c  cgen_regression_339.c  cgen_regression_343.c  cgen_regression_344.c  cgen_regression_345.c  cgen_regression_347.c  cgen_regression_353.c  cgen_regression_355.c  cgen_regression_357.c  cgen_regression_362.c  cgen_regression_384.c  cgen_regression_389.c  cgen_regression_39.c  cgen_regression_396.c  cgen_regression_402.c  cgen_regression_419.c  cgen_regression_425.c  cgen_regression_445.c  cgen_regression_450.c  cgen_regression_456.c  cgen_regression_491.c  cgen_regression_53.c  cgen_regression_56.c  (+39 more)
free/test/corpus/: run_corpus.sh
free/test/corpus/c11/: c11_alignas.c  c11_alignof.c  c11_anon_struct.c  c11_anon_union.c  c11_atomic_parse.c  c11_generic.c  c11_noreturn.c  c11_static_assert.c  c11_unicode_char.c
free/test/corpus/c23/: c23_attr_maybe_unused.c  c23_attr_nodiscard.c  c23_binary_literal.c  c23_bool_keyword.c  c23_constexpr.c  c23_digit_sep.c  c23_empty_init.c  c23_nullptr.c  c23_static_assert_no_msg.c  c23_typeof.c
free/test/corpus/c99/: c99_bool.c  c99_compound_literal.c  c99_designated_init.c  c99_designated_struct.c  c99_empty_macro_arg.c  c99_flexible_array.c  c99_for_decl.c  c99_func_macro.c  c99_hex_float.c  c99_implicit_int_gone.c  c99_inline.c  c99_line_comment.c  c99_long_long.c  c99_mixed_decl.c  c99_pragma.c  c99_restrict.c  c99_snprintf.c  c99_stdbool.c  c99_variadic_macro.c  c99_vla_basic.c
free/test/corpus/conformance/: array_param_decay.c  array_to_ptr_decay.c  assign_returns_value.c  break_innermost.c  cast_precedence.c  comma_in_for.c  compound_assign_eval.c  conditional_type.c  continue_innermost.c  convert_sign_extend.c  convert_truncate.c  convert_unsigned_to_signed.c  extern_linkage.c  func_no_proto.c  func_ptr_array.c  (+37 more)
free/test/csmith/: report.txt  run_tests.sh
free/test/fuzz/: CLAUDE.md  fuzz_asm.c  fuzz_elf.c  fuzz_lex.c  fuzz_parse.c
free/test/integration/: CLAUDE.md  run_tests.sh
free/test/kernel/: KERNEL_COMPILE_REPORT.md  kbuild_compat.sh  kernel_atomic.c  kernel_bitops.c  kernel_patterns.c  kernel_test.c  kernel_test2.c  kernel_test3.c  kernel_test4.c  kernel_test5.c  kernel_test6.c  kernel_test7.c  kernel_test8.c  kp_alternative_cb.c  kp_annotation_tokens.c  kp_atomic.c  kp_attribute.c  kp_bitmap.c  kp_bitops.c  kp_callback.c  kp_container_of.c  kp_ctype.c  kp_designated_init.c  kp_endian.c  kp_errno.c  kp_error_handling.c  kp_export_symbol.c  kp_goto_cleanup.c  kp_hash_table.c  kp_hex_dump.c  kp_inline_asm.c  kp_iomem.c  kp_klist.c  kp_kobject.c  kp_kref.c  kp_linked_list.c  kp_llist.c  kp_math64.c  kp_mempool.c  kp_minmax.c  (+35 more)
free/test/ld/: CLAUDE.md  test_dynamic.c  test_elf.c  test_kernel_features.c  test_layout.c  test_reloc.c  test_vmlinux_features.c
free/test/libc/: CLAUDE.md  test_ctype.c  test_dirent.c  test_math.c  test_mman.c  test_setjmp.c  test_stdio.c  test_stdlib.c  test_string.c  test_time.c
free/test/libcx/: test_map.c  test_str.c  test_vec.c
free/test/llvm/: LLVM_REPORT.md  results.txt  run_llvm_tests.sh
free/test/tcc-tests/: 31_args.args  33_ternary_op  46_grep.args  46_grep.expect  94_generic  report.txt  run_tests.sh
free/test/torture/: TORTURE_REPORT.md  run_torture.sh
(+549 files in other folders)
